# agent-canvas

./: .gitignore  README.md  render.yaml
backend/: pyproject.toml  requirements.txt
backend/app/: main.py  models.py  ollama_client.py  patterns.py  simulation.py
frontend/: index.html  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: Header.tsx  LeftPanel.tsx  LogInspector.tsx  MarkdownContent.tsx  NodeGraph.tsx
frontend/src/types/: agent.ts
