[project]
name = "agent-orchestration-backend"
version = "0.1.0"
description = "FastAPI backend for agent orchestration pattern simulations"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "httpx>=0.27.0",
]

[tool.uvicorn]
factory = false
